# py_accountant

./: .gitignore  .pre-commit-config.yaml  ACCOUNTING_AUDIT.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_DX_UX_AUDIT_GPT5.md  AUDIT_REPORT.md  CLEANUP_SUMMARY.md  INTEGRATION_DETAILED_PROMPT.md  INTEGRATION_GUIDE_SUMMARY.md  NEXT_STEPS_DOCUMENTATION.md  PRESENTATION_LAYER_REMOVAL.md  README.md  RPG_DX_UX_SDK_PLAN.puml  alembic.ini  docker-compose.yml  py_accountant_rpg.yaml  pyproject.toml  pytest.ini  refactoring_plan.yaml  rpg_docs_update_plan.yaml  rpg_py_accountant.yaml  rpg_py_accountant_dx_ux.yaml  test_migrations.db
ai_context/: COMPLETION_REPORT.md  INDEX.yaml  README.md  SUMMARY.md  VALIDATION_REPORT.md
ai_context/architecture/: CONSTRAINTS.yaml
ai_context/contracts/: DOMAIN_RULES.yaml  DTOS.yaml  PORTS.yaml  QUANTIZATION.yaml
ai_context/examples/: RPG_INTEGRATION_EXAMPLE.yaml
ai_context/flows/: POST_TRANSACTION.yaml
ai_context/snippets/: COMPLETION_SUMMARY.md  PROMPT_SNIPPETS.md  QUICK_CARD.md  README.md  snippets.json
alembic/: README.md  env.py
alembic/versions/: 0001_initial.py  0002_add_is_base_currency.py  0005_exchange_rate_events_archive.py  0006_add_journal_idempotency_key.py
docs/: ACCOUNTING_CHEATSHEET.md  ACCOUNTING_CHEETSHEET.md  AI_CONTEXT_OPTIMIZATION.md  API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_OVERVIEW.puml  AUDIT_CODE_MAPPING.md  AUDIT_INVENTORY.md  AUDIT_PRIORITIES.md  AUDIT_REMOVED_COMPONENTS.md  CHANGELOG.md  CLI_QUICKSTART.md  CONFIG_REFERENCE.md  DOCUMENTATION_FIX_PROPOSAL.md  DOCUMENTATION_FIX_SUMMARY.md  DOCUMENTATION_UPDATE_REPORT.md  FINAL_REPORT.md  FX_AUDIT.md  INDEX.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE_AIOGRAM.md  INTEGRRATION_GUIDE.md  MIGRATIONS_API.md  MIGRATION_HISTORY.md  PARITY_REPORT.md  PERFORMANCE.md  PROJECT_CRIB_SHEET.md  REFACTORING_RPG_ITERATIONS.yaml  REFACTORING_RPG_PLAN.md  RUNNING_MIGRATIONS.md  SPRINT_S1_COMPLETED.md  SPRINT_S2_COMPLETED.md  SPRINT_S2_PROMPT_UPDATED.md  SPRINT_S3_COMPLETED.md  SPRINT_S4_COMPLETED.md  SPRINT_S5_COMPLETED.md  SPRINT_S6_COMPLETED.md  SPRINT_S7_COMPLETED.md  SPRINT_S8_COMPLETED.md  TESTS_MIGRATION_PLAN.md  (+4 more)
examples/: __init__.py  expected_parity.json  fx_batch.json  trading_window.sh
examples/alembic_integration/: README.md
examples/cli_basic/: README.md  __init__.py  cli.py  requirements.txt
examples/fastapi_basic/: README.md  __init__.py  requirements.txt
examples/telegram_bot/: CHANGELOG.md  README.md  __init__.py  app.py  clock.py  config.py  handlers.py  main.py  uow.py
prompts/: REORGANIZE_DOCS.md
prompts/migration_api/: WAVE_1_COMPLETION_REPORT.md  migration_api_rpg_graph.yaml
src/: __init__.py
src/application/: __init__.py  ports.py
src/domain/: __init__.py  accounts.py  currencies.py  errors.py  fx_audit.py  ledger.py  quantize.py  value_objects.py
src/infrastructure/: __init__.py
src/presentation/: __init__.py  async_bridge.py
src/py_accountant/: __init__.py
src/py_fledger/: README.md  README.ru.md  TRADING_BALANCE.md  TRADING_BALANCE.mmd  TRADING_BALANCE.puml  TRADING_BALANCE_DIAGRAMS.md  __init__.py  book.py  errors.py  models.py  rpg.yaml
tests/: conftest.py
tests/docs/: README.md  test_code_examples.py  test_config_variables.py  (+6 more)
tools/: extract_and_validate_code_examples.py  generate_ai_context.py  generate_api_docs.py  validate_config.py
(+224 files in other folders)
