[tool.poetry]
name = "py-accountant"
version = "0.1.0"
description = "Async accounting ledger application"
authors = ["akm77 <aleksey.kotryakhov@gmail.com>"]
readme = "README.md"
# No packages section - Poetry used only as dependency manager
packages = [
  { include = "py_accountant", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
sqlalchemy = "^2.0.0"
psycopg = "^3.1.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
structlog = "^25.5.0"
aiosqlite = "^0.21.0"
typer = "0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.6.0"
pre-commit = ">=3.5.0"
pytest-asyncio = ">=0.23.0"


[tool.ruff]
line-length = 100
indent-width = 4
# Target the newest Python version for parsing (3.13)
target-version = "py313"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "SIM",# flake8-simplify
    "C4", # flake8-comprehensions
]
ignore = ["E501", "UP047"]  # E501: long lines; UP047: type params (incompatible with bound protocol runtime)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: performance or long-running tests",
]

# Enable Ruff as a pre-commit hook (reference only; actual hook in .pre-commit-config.yaml

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
